--- a/css/bootstrap/nav/navegador.css
+++ b/css/bootstrap/nav/navegador.css
@@ -9362,8 +9362,12 @@ a.text-dark:focus {
     color: var(--cor-primaria);
     text-decoration: none;
     display: inline-block;
-    padding: 10px;
+    padding: 5px;
+    margin: 20px;
+    margin-bottom: 0px;
+    margin-top: 1px;
     transition: background .3s;
+
 }
 
 .dp-menu ul li a:hover {
